kube/manifests/lister/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lister
  namespace: lister
  labels:
    app: lister
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lister
  template:
    metadata:
      labels:
        app: lister
    spec:
      containers:
        - name: lister
          image: inherently/lister:0.0.2
          #env:
          #- name: PG_URL
          #  value: "postgresql://tester:Apasswd@postgres-lister:5432?sslmode=disable"
          ports:
            - containerPort: 9392
