kube/manifests/lister/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: lister-svc
  namespace: lister
spec:
  selector:
    app: lister
  ports:
    - protocol: TCP
      name: web
      port: 9392
