kube/manifests/lister/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lister
  namespace: lister
spec:
  rules:
  - host: lister.kates.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lister-svc
            port:
              number: 9392
